update image url

--- a/_posts/2020-06-11-vim-clap.md
+++ b/_posts/2020-06-11-vim-clap.md
@@ -19,11 +19,11 @@ And this:
 Clap providers:
 [Clap providers](https://github.com/liuchengxu/vim-clap#providers)
 and this:
-[Clap providers]
+![Clap providers](https://raw.githubusercontent.com/ray-x/ray-x.github.io/master/img/clap-providers.jpg)
 
 Yes, it also provide a preview window......
 Clap preview:
-[Clap preview window]()
+![Clap preview window](https://raw.githubusercontent.com/ray-x/ray-x.github.io/master/img/clap-preview.jpg)
 
 
 You can replace you fzf commands with vim-clap, e.g. my vimrc:
@@ -79,4 +79,4 @@ command! Ag2 :Clap grep2 ++query<cword>
 
 ```
 
-So in command mode, when you type `History` `History!` `History:` it will provide same
+So in command mode, when you type `History` `History!` `History:` it will provides similar interface as fzf
