update image url

--- a/_posts/2020-06-11-vim-clap.md
+++ b/_posts/2020-06-11-vim-clap.md
@@ -18,7 +18,8 @@ Check this:
 And this:
 Clap providers:
 [Clap providers](https://github.com/liuchengxu/vim-clap#providers)
-and this:
+
+And this:
 ![Clap providers](https://raw.githubusercontent.com/ray-x/ray-x.github.io/master/img/clap-providers.jpg)
 
 Yes, it also provide a preview window......
